Home Page Complete

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>CAG Industries</title>
   </head>
   <link rel="stylesheet" href="./style/style.css" />
   <body>
@@ -24,8 +24,8 @@
           </div>
           <nav>
             <ul>
-              <li><a href="" class="nav">Home</a></li>
-              <li><a href="" class="nav active">Products</a></li>
+              <li><a href="" class="nav active">Home</a></li>
+              <li><a href="" class="nav">Products</a></li>
               <li><a href="" class="nav">Gallery</a></li>
               <li><a href="" class="nav">About</a></li>
               <li><a href="" class="nav">Contact</a></li>
@@ -105,8 +105,10 @@
               src="https://img.freepik.com/free-vector/destinatio-concept-illustration_114360-333.jpg?t=st=1712878931~exp=1712882531~hmac=8526624b6a75eff96e38db9ffa9cadce19f5079635de364ad55263cf21a61340&w=740"
               alt=""
             />
-            <span>Global <br /></span>
-            Reach
+            <span
+              >Global <br />
+              Reach</span
+            >
           </div>
           <div class="box">
             <img
@@ -123,7 +125,7 @@
       <div id="page-3">
         <div class="bg-img">
           <img
-            src="https://images.unsplash.com/photo-1516937941344-00b4e0337589?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            src="https://images.unsplash.com/photo-1474674556023-efef886fa147?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
             alt=""
           />
         </div>
@@ -132,6 +134,12 @@
         <button>View More</button>
       </div>
       <div id="page-4">
+        <div class="bg-img">
+          <img
+            src="https://images.unsplash.com/photo-1582538883674-a7f8bf900004?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt=""
+          />
+        </div>
         <div class="head"><h1>Featured Products</h1></div>
         <div class="p-boxs">
           <div class="p-box">
@@ -150,81 +158,127 @@
         </div>
       </div>
       <div id="page-5" class="s-page">
+        <div class="bg-img">
+          <img
+            src="https://images.unsplash.com/photo-1524514587686-e2909d726e9b?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt=""
+          />
+        </div>
         <section>
-          <img src="./resources/p1.webp" alt="" />
+          <img class="s-img" src="./resources/p1.webp" alt="" />
           <div class="text">
             <h1>Silver Impregnated Graphite Contacts</h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Asperiores exercitationem molestias harum accusantium, architecto
-              repellendus reprehenderit cupiditate aut facere illo quasi
-              inventore tenetur, unde tempora expedita debitis facilis numquam
-              eos doloribus deleniti impedit vitae amet totam? Assumenda vel,
-              laboriosam illum magnam eius unde commodi quis saepe, iusto nulla
-              laudantium quo eligendi qui reprehenderit voluptatibus nihil cum
-              est. Fuga quos consectetur sapiente odit earum quisquam quidem,
-              laudantium dignissimos adipisci. Exercitationem, eum magni
-              repellat animi laborum asperiores voluptatibus id sint, recusandae
-              voluptatum vero illo inventore assumenda at delectus nemo, nihil
-              fuga iure molestias tempore officia ullam? Dolores architecto
-              debitis nam earum optio facere impedit similique, commodi
-              reiciendis officiis illum
+              Silver Impregnated Graphite (SIG) contacts are used in high safety applications of railway signaling, traffic signaling, and numerous other applications due to high silver content that eliminates the risk of welding in the presence of graphite. High contact resistance (>200mΩ) was observed in the SIG contacts in a railway signaling operation after a few thousand operations of the relay. The high contact resistance was discovered to be a result of loose dust/foreign particles residing between the two contacts. Silver had been preferentially removed from the contacting surfaces during switching operations by an abrading effect of the dust/foreign particles, leaving only graphite on the contact area. Wear was accentuated by the presence of porosity and low hardness of the contacts, leading to improper interaction between the mating surfaces.
             </p>
             <button>View More</button>
           </div>
         </section>
         <section>
-            <div class="text">
-              <h1>Silver Impregnated Graphite Contacts</h1>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Asperiores exercitationem molestias harum accusantium, architecto
-                repellendus reprehenderit cupiditate aut facere illo quasi
-                inventore tenetur, unde tempora expedita debitis facilis numquam
-                eos doloribus deleniti impedit vitae amet totam? Assumenda vel,
-                laboriosam illum magnam eius unde commodi quis saepe, iusto nulla
-                laudantium quo eligendi qui reprehenderit voluptatibus nihil cum
-                est. Fuga quos consectetur sapiente odit earum quisquam quidem,
-                laudantium dignissimos adipisci. Exercitationem, eum magni
-                repellat animi laborum asperiores voluptatibus id sint, recusandae
-                voluptatum vero illo inventore assumenda at delectus nemo, nihil
-                fuga iure molestias tempore officia ullam? Dolores architecto
-                debitis nam earum optio facere impedit similique, commodi
-                reiciendis officiis illum
-              </p>
-              <button>View More</button>
-            </div>
-            <img src="./resources/p2.webp" alt="" />
-          </section>
+          <div class="text">
+            <h1>Silver Impregnated Graphite Contacts</h1>
+            <p>
+              Silver Impregnated Graphite relay contacts combine the best properties of silver (electrical/thermal conductivity) and graphite (refractory nature) into a composite material. Distinctive features of the SIG material include its hard fusing characteristic, better conduction of heat and electricity, and easy brazing. Graphite carbon has high heat of vaporization and appreciably low material transfer in the localized high temperature spots developed during mating of contacts. Additionally, due to a high percentage of silver, the desired electrical properties are retained with practically no risk of welding. This combination of properties makes these contacts suitable for high safety applications such as railway signaling, traffic signaling, and numerous other applications.
+            </p>
+            <button>View More</button>
+          </div>
+          <img class="s-img" src="./resources/p2.webp" alt="" />
+        </section>
       </div>
       <div id="page-6" class="s-page">
+        <div class="bg-img">
+          <img
+            src="https://images.unsplash.com/photo-1511651432281-5cf2a44004f4?q=80&w=1632&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt=""
+          />
+        </div>
         <section>
-            <img src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />
+          <img
+            class="s-img"
+            src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt=""
+          />
 
-            <div class="text">
-                <span>Welcome to</span>
-              <h1>CAG Industries</h1>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Asperiores exercitationem molestias harum accusantium, architecto
-                repellendus reprehenderit cupiditate aut facere illo quasi
-                inventore tenetur, unde tempora expedita debitis facilis numquam
-                eos doloribus deleniti impedit vitae amet totam? Assumenda vel,
-                laboriosam illum magnam eius unde commodi quis saepe, iusto nulla
-                laudantium quo eligendi qui reprehenderit voluptatibus nihil cum
-                est. Fuga quos consectetur sapiente odit earum quisquam quidem,
-                laudantium dignissimos adipisci. Exercitationem, eum magni
-                repellat animi laborum asperiores voluptatibus id sint, recusandae
-                voluptatum vero illo inventore assumenda at delectus nemo, nihil
-                fuga iure molestias tempore officia ullam? Dolores architecto
-                debitis nam earum optio facere impedit similique, commodi
-                reiciendis officiis illum
-              </p>
-              <button>View More</button>
-            </div>
-          </section>
+          <div class="text">
+            <span>Welcome to</span>
+            <h1>CAG Industries</h1>
+            <p>
+              Cag Industries, a pioneering firm specializing in the
+              manufacturing of Silver Impregnated Graphite Contacts, stands as a
+              testament to years of dedication, technical expertise, and a
+              commitment to excellence. Founded on a solid foundation of
+              technical knowledge and experience garnered through systematic
+              research, Cag Industries has emerged as a trusted provider of
+              high-quality contacts for various railway signaling relay
+              manufacturers and Indian Railways.
+              <br />
+              The journey of Cag Industries has been characterized by a
+              relentless pursuit of technical proficiency and innovation. With a
+              profound understanding of the intricacies of contact operation and
+              an unwavering focus on quality, the firm has developed Silver
+              Impregnated Graphite Contacts that are compatible with a wide
+              range of signaling relays conforming to BRS Standards. This
+              compatibility has been validated by a vast database of satisfied
+              customers who rely on Cag Industries' products for critical
+              contact applications.
+            </p>
+            <button>View More</button>
+          </div>
+        </section>
       </div>
-      <div id="page-7"></div>
+      <div id="page-7" class="s-page">
+        <div class="bg-img">
+          <img
+            src="https://images.unsplash.com/photo-1674462488354-7df30dff7627?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OTZ8fHllbGxvdyUyMHRyYWlufGVufDB8MHwwfHx8MA%3D%3D"
+            alt=""
+          />
+        </div>
+
+        <div class="head"><h1>Application</h1></div>
+        <section>
+          <div class="text">
+            <p style="font-size: 1.5vmax; color: #fff">
+              Silver Impregnated Graphite contacts are generally tested for dimensions, crushing strength, silver content, hardness, ash content, distribution of silver in the graphite matrix, contact resistance, X-ray mapping of silver, microstructure, life test, surface finish, and bulk density. The quality assurance of electrical contacts is often treated as an evaluation of "components in great quantity" and tested with statistical methods. This maybe the reasonable for the registration of fabrication defects, but consideration is also required for systematic failures related to specific materials, environmental influences during processing, application, and so forth. Failures caused by environmental influence occur late in the lifetime of the contact or component and may not be detected by early evaluations. Additionally, contamination on the surface of contacts and have deleterious effect on the contact and switching properties and may, in extreme cases, lead to early failure of devices.
+            </p>
+          </div>
+          <img class="s-img" src="./resources/p2.webp" alt="" />
+        </section>
+      </div>
+      <footer>
+        <section>
+          <div class="logo">
+            <h1>CAG Industries</h1>
+          </div>
+          <nav>
+            <ul>
+              <li><a href="">Home</a></li>
+              <li><a href="">Gallery</a></li>
+              <li><a href="">Products</a></li>
+              <li><a href="">About</a></li>
+              <li><a href="">Contact</a></li>
+            </ul>
+          </nav>
+        </section>
+        <section class="con">
+          <span> <i class="fa-solid fa-envelope"></i> support@cagind.in</span>
+          <span> <i class="fa-solid fa-envelope"></i> info@cagind.in</span>
+          <span> <i class="fa-solid fa-phone"></i> +91 8436529670</span>
+          <div class="icons">
+            <a href="">
+              <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="">
+              <i class="fa-brands fa-youtube"></i>
+            </a>
+            <a href="">
+              <i class="fa-brands fa-twitter"></i>
+            </a>
+            <a href="">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+          </div>
+        </section>
+      </footer>
     </div>
   </body>
   <script
