Home Page Complete

--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
           <img src="./resources/p1.webp" alt="" />
           <img src="./resources/p4.webp" alt="" />
           <img src="./resources/p2.webp" alt="" />
-          <img
-            src="https://images.unsplash.com/photo-1592844002373-a55ecd7af140?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt=""
-          />
+          <img src="./resources/p6.jpg" alt="" />
         </div>
         <header>
           <div id="logo">
@@ -24,10 +21,16 @@
           </div>
           <nav>
             <ul>
-              <li><a href="" class="nav active">Home</a></li>
-              <li><a href="" class="nav">Products</a></li>
+              <li><a href="./index.html" class="nav active">Home</a></li>
+              <li>
+                <a href="./pages/product.html" class="nav">Products</a>
+                <div class="d-down">
+                  <a href="./pages/product.html" class="nav">Silver Impregnated Graphite</a>
+                  <a href="./pages/product.html" class="nav">Silver Impregnated Graphite Heavy Duty</a>
+                </div>
+              </li>
               <li><a href="" class="nav">Gallery</a></li>
-              <li><a href="" class="nav">About</a></li>
+              <li><a href="./pages/about.html" class="nav">About</a></li>
               <li><a href="" class="nav">Contact</a></li>
             </ul>
             <div id="srch">
@@ -40,20 +43,20 @@
         </header>
         <div id="hero">
           <section>
-            <h1>CAG Industries</h1>
+            <h1 style="color: #fff">CAG Industries</h1>
             <section id="ani">
               <p>
-                Pwoering Rail with Precision <br />
-                Your Jourrney Our Excellence <br />
+                Powering Rail with Precision <br />
+                Your Journey Our Excellence <br />
                 Sparkinng Performance Ensuring Safty
               </p>
             </section>
           </section>
           <section>
-            <span> Manufacturers of Silver Impregnated</span>
+            <span> Manufacturers of Silver Impregrated Graphite Contact</span>
             <div class="btns">
               <a href="#p2">
-                <button>See Gallery</button>
+                <button>Our Products</button>
               </a>
               <button>Contact Us</button>
             </div>
@@ -61,7 +64,7 @@
         </div>
       </div>
       <div id="page-2">
-        <h1>Why you choos us?</h1>
+        <h1>Why choose us?</h1>
         <div class="boxs">
           <div class="box">
             <img
@@ -123,24 +126,20 @@
         </div>
       </div>
       <div id="page-3">
-        <div class="bg-img">
-          <img
-            src="https://images.unsplash.com/photo-1474674556023-efef886fa147?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt=""
-          />
-        </div>
-        <h1>High Safety Apllication</h1>
+        <h1>High Safety Application</h1>
         <span>Application in railway signaling relay</span>
         <button>View More</button>
       </div>
       <div id="page-4">
         <div class="bg-img">
           <img
-            src="https://images.unsplash.com/photo-1582538883674-a7f8bf900004?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            src="./resources/p7.jpg"
             alt=""
           />
         </div>
-        <div class="head"><h1>Featured Products</h1></div>
+        <div>
+          <h1 style="color: #000; font-size: 5vmax">Featured Products</h1>
+        </div>
         <div class="p-boxs">
           <div class="p-box">
             <img src="./resources/pro1.png" alt="" />
@@ -152,8 +151,9 @@
           <div class="p-box">
             <img src="./resources/pro2.png" alt="" />
             <span
-              >Silver Impregnated Graphite <br />Contacts for Heavy Use</span
-            >
+              >Silver Impregnated Graphite <br />
+              Heavy Duty Contacts
+            </span>
           </div>
         </div>
       </div>
@@ -169,16 +169,41 @@
           <div class="text">
             <h1>Silver Impregnated Graphite Contacts</h1>
             <p>
-              Silver Impregnated Graphite (SIG) contacts are used in high safety applications of railway signaling, traffic signaling, and numerous other applications due to high silver content that eliminates the risk of welding in the presence of graphite. High contact resistance (>200mΩ) was observed in the SIG contacts in a railway signaling operation after a few thousand operations of the relay. The high contact resistance was discovered to be a result of loose dust/foreign particles residing between the two contacts. Silver had been preferentially removed from the contacting surfaces during switching operations by an abrading effect of the dust/foreign particles, leaving only graphite on the contact area. Wear was accentuated by the presence of porosity and low hardness of the contacts, leading to improper interaction between the mating surfaces.
+              Silver Impregnated Graphite (SIG) contacts are used in high safety
+              applications of railway signaling, traffic signaling, and numerous
+              other applications due to high silver content that eliminates the
+              risk of welding in the presence of graphite. High contact
+              resistance (>200mΩ) was observed in the SIG contacts in a railway
+              signaling operation after a few thousand operations of the relay.
+              The high contact resistance was discovered to be a result of loose
+              dust/foreign particles residing between the two contacts. Silver
+              had been preferentially removed from the contacting surfaces
+              during switching operations by an abrading effect of the
+              dust/foreign particles, leaving only graphite on the contact area.
+              Wear was accentuated by the presence of porosity and low hardness
+              of the contacts, leading to improper interaction between the
+              mating surfaces.
             </p>
             <button>View More</button>
           </div>
         </section>
         <section>
           <div class="text">
-            <h1>Silver Impregnated Graphite Contacts</h1>
+            <h1>Silver Impregnated Graphite Heavy Duty Contacts</h1>
             <p>
-              Silver Impregnated Graphite relay contacts combine the best properties of silver (electrical/thermal conductivity) and graphite (refractory nature) into a composite material. Distinctive features of the SIG material include its hard fusing characteristic, better conduction of heat and electricity, and easy brazing. Graphite carbon has high heat of vaporization and appreciably low material transfer in the localized high temperature spots developed during mating of contacts. Additionally, due to a high percentage of silver, the desired electrical properties are retained with practically no risk of welding. This combination of properties makes these contacts suitable for high safety applications such as railway signaling, traffic signaling, and numerous other applications.
+              Silver Impregnated Graphite relay contacts combine the best
+              properties of silver (electrical/thermal conductivity) and
+              graphite (refractory nature) into a composite material.
+              Distinctive features of the SIG material include its hard fusing
+              characteristic, better conduction of heat and electricity, and
+              easy brazing. Graphite carbon has high heat of vaporization and
+              appreciably low material transfer in the localized high
+              temperature spots developed during mating of contacts.
+              Additionally, due to a high percentage of silver, the desired
+              electrical properties are retained with practically no risk of
+              welding. This combination of properties makes these contacts
+              suitable for high safety applications such as railway signaling,
+              traffic signaling, and numerous other applications.
             </p>
             <button>View More</button>
           </div>
@@ -186,12 +211,6 @@
         </section>
       </div>
       <div id="page-6" class="s-page">
-        <div class="bg-img">
-          <img
-            src="https://images.unsplash.com/photo-1511651432281-5cf2a44004f4?q=80&w=1632&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt=""
-          />
-        </div>
         <section>
           <img
             class="s-img"
@@ -225,25 +244,36 @@
             <button>View More</button>
           </div>
         </section>
-      </div>
-      <div id="page-7" class="s-page">
-        <div class="bg-img">
-          <img
-            src="https://images.unsplash.com/photo-1674462488354-7df30dff7627?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OTZ8fHllbGxvdyUyMHRyYWlufGVufDB8MHwwfHx8MA%3D%3D"
-            alt=""
-          />
+        <div style="margin-top: 5vmax">
+          <h1 style="color: #fff; font-size: 5vmax">Application</h1>
         </div>
 
-        <div class="head"><h1>Application</h1></div>
         <section>
           <div class="text">
-            <p style="font-size: 1.5vmax; color: #fff">
-              Silver Impregnated Graphite contacts are generally tested for dimensions, crushing strength, silver content, hardness, ash content, distribution of silver in the graphite matrix, contact resistance, X-ray mapping of silver, microstructure, life test, surface finish, and bulk density. The quality assurance of electrical contacts is often treated as an evaluation of "components in great quantity" and tested with statistical methods. This maybe the reasonable for the registration of fabrication defects, but consideration is also required for systematic failures related to specific materials, environmental influences during processing, application, and so forth. Failures caused by environmental influence occur late in the lifetime of the contact or component and may not be detected by early evaluations. Additionally, contamination on the surface of contacts and have deleterious effect on the contact and switching properties and may, in extreme cases, lead to early failure of devices.
+            <p style="font-size: 1.4vmax; color: #fff">
+              Silver Impregnated Graphite contacts are generally tested for
+              dimensions, crushing strength, silver content, hardness, ash
+              content, distribution of silver in the graphite matrix, contact
+              resistance, X-ray mapping of silver, microstructure, life test,
+              surface finish, and bulk density. The quality assurance of
+              electrical contacts is often treated as an evaluation of
+              "components in great quantity" and tested with statistical
+              methods. This maybe the reasonable for the registration of
+              fabrication defects, but consideration is also required for
+              systematic failures related to specific materials, environmental
+              influences during processing, application, and so forth. Failures
+              caused by environmental influence occur late in the lifetime of
+              the contact or component and may not be detected by early
+              evaluations. Additionally, contamination on the surface of
+              contacts and have deleterious effect on the contact and switching
+              properties and may, in extreme cases, lead to early failure of
+              devices.
             </p>
           </div>
-          <img class="s-img" src="./resources/p2.webp" alt="" />
+          <img class="s-img" src="./resources/p5.jpg" alt="" />
         </section>
       </div>
+
       <footer>
         <section>
           <div class="logo">
@@ -265,17 +295,15 @@
           <span> <i class="fa-solid fa-phone"></i> +91 8436529670</span>
           <div class="icons">
             <a href="">
-              <i class="fa-brands fa-facebook"></i>
+              <i class="fa-brands fa-google"></i>
             </a>
             <a href="">
-              <i class="fa-brands fa-youtube"></i>
+              <i class="fa-solid fa-map-location-dot"></i>
             </a>
             <a href="">
-              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-solid fa-shop"></i>
             </a>
-            <a href="">
-              <i class="fa-brands fa-instagram"></i>
-            </a>
+            
           </div>
         </section>
       </footer>
