--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               </li>
               <li><a href="" class="nav">Gallery</a></li>
               <li><a href="./pages/about.html" class="nav">About</a></li>
-              <li><a href="" class="nav">Contact</a></li>
+              <li><a href="./pages/contact/index.html" class="nav">Contact</a></li>
             </ul>
             <div id="srch">
               <input type="text" placeholder="Search..." />
@@ -142,14 +142,14 @@
         </div>
         <div class="p-boxs">
           <div class="p-box">
-            <img src="./resources/pro1.png" alt="" />
+            <img src="./resources/pro1_1.png" alt="" />
             <span
               >Silver Impregnated <br />
               Graphite Contacts</span
             >
           </div>
           <div class="p-box">
-            <img src="./resources/pro2.png" alt="" />
+            <img src="./resources/pro2_1.png" alt="" />
             <span
               >Silver Impregnated Graphite <br />
               Heavy Duty Contacts
