--- a/pages/about.html
+++ b/pages/about.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="../style/about.css" />
+    <link rel="stylesheet" href="../style/header.css">
+    <link rel="stylesheet" href="../style/footer.css">
   </head>
   <body>
     <div id="main">
       <div id="page-1">
-        <header>
+        <header class="header">
           <div id="logo">
             <img src="../resources/logo.png" alt="" />
           </div>
