--- a/pages/product2.html
+++ b/pages/product2.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../style/product.css">
+    <link rel="stylesheet" href="../style/header.css">
+    <link rel="stylesheet" href="../style/footer.css">
 </head>
 <body>
     <div id="main">
@@ -35,9 +37,9 @@
                 </section>
                 <section class="s-imgs">
                     <img src="../resources/p2.webp" alt="">
-                    <img src="../resources/p1.webp" alt="">
-                    <img src="../resources/p3.webp" alt="">
-                    <img src="../resources/p4.webp" alt="">
+                    <img src="../resources/pro2_1.png" alt="">
+                    <img src="../resources/pro2_2.jpg" alt="">
+                    <img src="../resources/pro2_3.jpg" alt="">
                 </section>
             </div>
             <div class="dtls">
