--- a/pages/about.html
+++ b/pages/about.html
@@ -17,11 +17,11 @@
           </div>
           <nav>
             <ul>
-              <li><a href="" class="nav">Home</a></li>
-              <li><a href="" class="nav">Products</a></li>
-              <li><a href="" class="nav">Gallery</a></li>
-              <li><a href="" class="nav active">About</a></li>
-              <li><a href="" class="nav">Contact</a></li>
+              <li><a href="../index.html" class="nav">Home</a></li>
+              <li><a href="./product1.html" class="nav">Products</a></li>
+             
+              <li><a href="./about.html" class="nav active">About</a></li>
+              <li><a href="./contact/index.html" class="nav">Contact</a></li>
             </ul>
             <div id="srch">
               <input type="text" placeholder="Search..." />
@@ -39,39 +39,13 @@
           <section class="col">
             <div class="left">
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Incidunt facere culpa laboriosam illo fuga quo accusantium
-                natus, aliquam sequi porro at deleniti ipsam harum eius tenetur
-                animi asperiores molestias perspiciatis voluptate laudantium
-                facilis quaerat, tempora corporis delectus. A impedit quibusdam
-                maiores quod exercitationem dicta, ad voluptas dolorum qui quam
-                nemo assumenda tenetur possimus! Consequatur aliquid,
-                voluptatibus omnis velit dolor corrupti facere minus minima
-                eaque fugiat facilis officiis impedit voluptate. Perferendis,
-                quis! Tempora vitae soluta, illum cumque sint debitis quia
-                quibusdam? Pariatur dolores adipisci sunt voluptate
-                exercitationem corporis quia consequuntur, nam doloremque, modi
-                laboriosam quos?
+                Cag Industries, a pioneering firm specializing in the manufacturing of Silver Impregnated Graphite Contacts, stands as a testament to years of dedication, technical expertise, and a commitment to excellence. Founded on a solid foundation of technical knowledge and experience garnered through systematic research, Cag Industries has emerged as a trusted provider of high-quality contacts for various railway signaling relay manufacturers and Indian Railways.
               </p>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Aliquid tenetur, dolore ipsa odit voluptatibus expedita
-                adipisci, sequi sed officia beatae cumque, debitis eius
-                doloribus? Eum, a delectus! Porro voluptatem dolorem vel vitae
-                deserunt expedita numquam ducimus quidem magnam! Officia amet
-                error mollitia accusamus consectetur quisquam modi hic maiores
-                neque, quos, atque nobis porro sit harum a ex fugiat eum
-                eligendi quibusdam doloremque soluta, iste quia! Fuga debitis
-                dolorum ratione doloribus quae architecto assumenda sint tenetur
-                harum totam! Doloremque totam dicta non in dolor? Porro quisquam
-                tenetur maxime quae repellat tempore?
+                The journey of Cag Industries has been characterized by a relentless pursuit of technical proficiency and innovation. With a profound understanding of the intricacies of contact operation and an unwavering focus on quality, the firm has developed Silver Impregnated Graphite Contacts that are compatible with a wide range of signaling relays conforming to BRS Standards. This compatibility has been validated by a vast database of satisfied customers who rely on Cag Industries' products for critical contact applications.
               </p>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
-                asperiores libero exercitationem accusantium dignissimos ducimus
-                laboriosam corporis quam! Similique amet, placeat aperiam
-                eligendi expedita quaerat voluptatum labore deserunt deleniti
-                dolorem!
+                At the core of Cag Industries' ethos lies a commitment to professionalism and quality of service. The driving force behind the firm's success is the proven skills and dedication of its people. With a team of technically trained and qualified professionals, Cag Industries strives to establish and maintain effective schemes for developing a foolproof quality management system. This system is implemented under the direct supervision of management, ensuring that every aspect of production meets the highest standards of quality and reliability.
               </p>
               <br />
               <div class="d-log">
@@ -86,13 +60,7 @@
                 pariatur temporibus aliquid, tempora dicta assumenda.</span
               >
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. In
-                maxime possimus eaque esse, praesentium voluptas. Reprehenderit
-                error, impedit doloremque illo deserunt voluptatum! Quas,
-                tempora? Blanditiis quisquam dolorum dicta a aperiam! Lorem
-                ipsum dolor sit amet consectetur adipisicing elit. Suscipit
-                excepturi libero sapiente quidem natus in, aspernatur
-                perspiciatis quae repellat ratione.
+                Cag Industries is not content with resting on past achievements; instead, it remains a dynamic and vibrant entity focused on continuous improvement. The firm places a strong emphasis on constant upgradation of its systems, technology, and human resources to achieve and exceed the quality targets set by the organization. Through a combination of hard work and modern management techniques, Cag Industries actively promotes excellence in the quality of its products, leading to greater efficiency and profitability.
               </p>
             </div>
             <div class="right">
