--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -20,11 +20,10 @@
       </div>
       <nav>
         <ul>
-          <li><a href="../index.html" class="nav">Home</a></li>
-          <li><a href="" class="nav active">Products</a></li>
-          <li><a href="" class="nav">Gallery</a></li>
-          <li><a href="../pages/about.html" class="nav ">About</a></li>
-          <li><a href="" class="nav">Contact</a></li>
+          <li><a href="../../index.html" class="nav">Home</a></li>
+          <li><a href="../product1.html" class="nav">Products</a></li>
+          <li><a href="../about.html" class="nav ">About</a></li>
+          <li><a href="./index.html" class="nav  active">Contact</a></li>
         </ul>
         <div id="srch">
           <input type="text" placeholder="Search..." />
