--- a/pages/product2.html
+++ b/pages/product2.html
@@ -17,10 +17,9 @@
             <nav>
               <ul>
                 <li><a href="../index.html" class="nav">Home</a></li>
-                <li><a href="" class="nav active">Products</a></li>
-                <li><a href="" class="nav">Gallery</a></li>
-                <li><a href="../pages/about.html" class="nav ">About</a></li>
-                <li><a href="" class="nav">Contact</a></li>
+                <li><a href="./product1.html" class="nav active">Products</a></li>
+                <li><a href="./about.html" class="nav">About</a></li>
+                <li><a href="./contact/index.html" class="nav">Contact</a></li>
               </ul>
               <div id="srch">
                 <input type="text" placeholder="Search..." />
@@ -33,18 +32,18 @@
         <div id="page-1">
             <div class="imgs">
                 <section class="b-imgs">
-                    <img id="img" src="../resources/p1.webp" alt="">
+                    <img id="img" src="../resources/p2.webp" alt="">
                 </section>
                 <section class="s-imgs">
                     <img src="../resources/p2.webp" alt="">
                     <img src="../resources/pro2_1.png" alt="">
                     <img src="../resources/pro2_2.jpg" alt="">
-                    <img src="../resources/pro2_3.jpg" alt="">
                 </section>
             </div>
             <div class="dtls">
-                <h1>SIG</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis eum labore, excepturi voluptatum ex maxime, atque sed consequatur alias itaque commodi quam fugiat! Nobis, natus. Delectus id laborum in consequatur magnam, voluptatum minima nobis. Voluptatum, sed quos cumque atque veniam vitae? Culpa temporibus voluptas explicabo iste quae obcaecati blanditiis magni, ex soluta fugiat ab itaque iure cumque exercitationem molestias quia quibusdam mollitia? Obcaecati est quasi quaerat iure exercitationem, amet nobis voluptas velit quod nemo qui deleniti quo aliquid voluptatum. Commodi natus ducimus tenetur quos exercitationem reprehenderit similique eaque, aliquid aspernatur ab voluptatibus consequatur accusantium rerum. Illum obcaecati labore et saepe delectus exercitationem, cumque minima sunt nostrum, animi aliquam mollitia nesciunt in corrupti rerum molestiae magnam molestias a repudiandae deserunt officia! Tenetur itaque voluptates excepturi? Dolores saepe quis quod deleniti quo molestias aliquam suscipit aperiam in sunt, modi aliquid quos minima libero atque quisquam praesentium exercitationem nesciunt rerum ipsum dolore nisi?</p>
+                <h1>Silver Impregnated Graphite 
+                  Heavy Duty Contacts</h1>
+                <p>Silver impregnated graphite contacts for heavy-duty applications are engineered to withstand the rigors of high current loads, frequent switching cycles, and harsh operating conditions. These contacts feature enhanced conductivity due to silver impregnation, ensuring efficient electrical transmission even under heavy loads. Constructed with robust materials and techniques, they withstand mechanical stresses such as impact and vibration. Their high wear resistance, derived from silver impregnation, guarantees prolonged service life despite frequent switching. Moreover, they offer corrosion resistance, crucial for harsh environments with high humidity, dust, or chemical exposure. Engineered for temperature stability, they maintain performance across a wide range of conditions. With low contact resistance, they minimize energy loss and heat generation, vital for heavy-duty operations. Selection considerations include current rating, switching frequency, environmental factors, mechanical compatibility, adherence to reliability standards, and maintenance requirements.</p>
             </div>
             
         </div>
@@ -55,11 +54,10 @@
               </div>
               <nav>
                 <ul>
-                  <li><a href="">Home</a></li>
-                  <li><a href="">Gallery</a></li>
-                  <li><a href="">Products</a></li>
-                  <li><a href="">About</a></li>
-                  <li><a href="">Contact</a></li>
+                  <li><a href="../index.html">Home</a></li>
+                  <li><a href="./product1.html">Products</a></li>
+                  <li><a href="./about.html">About</a></li>
+                  <li><a href="./contact/index.html">Contact</a></li>
                 </ul>
               </nav>
             </section>
