--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>CAG Industries</title>
   </head>
   <link rel="stylesheet" href="./style/style.css" />
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css"> -->
   <body>
     <div id="main">
       <div id="page-1">
@@ -23,15 +24,13 @@
             <ul>
               <li><a href="./index.html" class="nav active">Home</a></li>
               <li>
-                <a href="./pages/product.html" class="nav">Products</a>
-                <div class="d-down">
-                  <a href="./pages/product.html" class="nav">Silver Impregnated Graphite</a>
-                  <a href="./pages/product.html" class="nav">Silver Impregnated Graphite Heavy Duty</a>
-                </div>
+                <a href="#page-4" class="nav">Products</a>
               </li>
               <li><a href="" class="nav">Gallery</a></li>
               <li><a href="./pages/about.html" class="nav">About</a></li>
-              <li><a href="./pages/contact/index.html" class="nav">Contact</a></li>
+              <li>
+                <a href="./pages/contact/index.html" class="nav">Contact</a>
+              </li>
             </ul>
             <div id="srch">
               <input type="text" placeholder="Search..." />
@@ -55,15 +54,19 @@
           <section>
             <span> Manufacturers of Silver Impregrated Graphite Contact</span>
             <div class="btns">
-              <a href="#p2">
+              <a href="#page-4">
                 <button>Our Products</button>
               </a>
-              <button>Contact Us</button>
+              <a href="./pages/contact/index.html">
+                <button>Contact Us</button>
+              </a>
             </div>
           </section>
         </div>
       </div>
       <div id="page-2">
+        <section id="p2-ani">
+
         <h1>Why choose us?</h1>
         <div class="boxs">
           <div class="box">
@@ -124,37 +127,63 @@
             >
           </div>
         </div>
+      </section>
+
+      </div>
+      <div id="page-8">
+        <section id="p8-ani">
+
+          <h1>Our Story</h1>
+          <p>
+            CAG industries is one of the leading manufacturers & exporters of
+            Silver impregnated graphite contact in India. We design, manufacture,
+            and export all kinds of SIG products. Conceived with a notion to
+            provide world-class and supreme quality heating elements we have
+            established a brand name where our quality and work speaks louder than
+            words
+          </p>
+          <a href="./pages/about.html">
+            <button>Know More</button>
+          </a>
+        </section>
       </div>
       <div id="page-3">
+        <section id="p3-ani">
+
         <h1>High Safety Application</h1>
         <span>Application in railway signaling relay</span>
-        <button>View More</button>
+        <a href="#app-page">
+          <button>View More</button>
+        </a>
+      </section>
+
       </div>
       <div id="page-4">
         <div class="bg-img">
-          <img
-            src="./resources/p7.jpg"
-            alt=""
-          />
+          <img src="./resources/p7.jpg" alt="" />
         </div>
         <div>
           <h1 style="color: #000; font-size: 5vmax">Featured Products</h1>
         </div>
         <div class="p-boxs">
-          <div class="p-box">
-            <img src="./resources/pro1_1.png" alt="" />
-            <span
-              >Silver Impregnated <br />
-              Graphite Contacts</span
-            >
-          </div>
-          <div class="p-box">
-            <img src="./resources/pro2_1.png" alt="" />
-            <span
-              >Silver Impregnated Graphite <br />
-              Heavy Duty Contacts
-            </span>
-          </div>
+          <a href="./pages/product1.html">
+            <div class="p-boxL">
+              <img src="./resources/pro1_1.png" alt="" />
+              <span
+                >Silver Impregnated <br />
+                Graphite Contacts</span
+              >
+            </div>
+          </a>
+          <a href="./pages/product2.html">
+            <div class="p-boxR">
+              <img src="./resources/pro2_1.png" alt="" />
+              <span
+                >Silver Impregnated Graphite <br />
+                Heavy Duty Contacts
+              </span>
+            </div>
+          </a>
         </div>
       </div>
       <div id="page-5" class="s-page">
@@ -164,7 +193,7 @@
             alt=""
           />
         </div>
-        <section>
+        <section  id="sec-1">
           <img class="s-img" src="./resources/p1.webp" alt="" />
           <div class="text">
             <h1>Silver Impregnated Graphite Contacts</h1>
@@ -187,8 +216,8 @@
             <button>View More</button>
           </div>
         </section>
-        <section>
-          <div class="text">
+        <section id="sec-2">
+          <div class="text2">
             <h1>Silver Impregnated Graphite Heavy Duty Contacts</h1>
             <p>
               Silver Impregnated Graphite relay contacts combine the best
@@ -207,18 +236,18 @@
             </p>
             <button>View More</button>
           </div>
-          <img class="s-img" src="./resources/p2.webp" alt="" />
+          <img class="s-img2" src="./resources/p2.webp" alt="" />
         </section>
       </div>
       <div id="page-6" class="s-page">
-        <section>
+        <section id="sec-3">
           <img
-            class="s-img"
+            class="s-img3"
             src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
             alt=""
           />
 
-          <div class="text">
+          <div class="text3">
             <span>Welcome to</span>
             <h1>CAG Industries</h1>
             <p>
@@ -244,12 +273,12 @@
             <button>View More</button>
           </div>
         </section>
-        <div style="margin-top: 5vmax">
+        <div id="app-page" style="margin-top: 5vmax">
           <h1 style="color: #fff; font-size: 5vmax">Application</h1>
         </div>
 
-        <section>
-          <div class="text">
+        <section id="sec-4">
+          <div class="text4">
             <p style="font-size: 1.4vmax; color: #fff">
               Silver Impregnated Graphite contacts are generally tested for
               dimensions, crushing strength, silver content, hardness, ash
@@ -270,7 +299,7 @@
               devices.
             </p>
           </div>
-          <img class="s-img" src="./resources/p5.jpg" alt="" />
+          <img class="s-img4" src="./resources/p5.jpg" alt="" />
         </section>
       </div>
 
@@ -303,12 +332,16 @@
             <a href="">
               <i class="fa-solid fa-shop"></i>
             </a>
-            
           </div>
         </section>
       </footer>
     </div>
   </body>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+  <script src="./script/animation.js"></script>
+  <script src="./script/script.js"></script>
   <script
     src="https://kit.fontawesome.com/8cfc6428ac.js"
     crossorigin="anonymous"
