--- a/pages/product1.html
+++ b/pages/product1.html
@@ -1,89 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../style/product.css">
-    <link rel="stylesheet" href="../style/header.css">
-    <link rel="stylesheet" href="../style/footer.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../style/product.css" />
+    <link rel="stylesheet" href="../style/header.css" />
+    <link rel="stylesheet" href="../style/footer.css" />
+  </head>
+  <body>
     <div id="main">
-        <header class="header">
-            <div id="logo">
-              <img src="../resources/logo.png" alt="" />
-            </div>
-            <nav>
-              <ul>
-                <li><a href="../index.html" class="nav">Home</a></li>
-                <li><a href="" class="nav active">Products</a></li>
-                <li><a href="" class="nav">Gallery</a></li>
-                <li><a href="../pages/about.html" class="nav ">About</a></li>
-                <li><a href="" class="nav">Contact</a></li>
-              </ul>
-              <div id="srch">
-                <input type="text" placeholder="Search..." />
-                <div class="s-icon">
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                </div>
-              </div>
-            </nav>
-          </header>
-        <div id="page-1">
-            <div class="imgs">
-                <section class="b-imgs">
-                    <img id="img" src="../resources/p1.webp" alt="">
-                </section>
-                <section class="s-imgs">
-                    <img src="../resources/p1.webp" alt="">
-                    <img src="../resources/pro1_1.png" alt="">
-                    <img src="../resources/pro1_2.webp" alt="">
-                    <img src="../resources/pro1_3.jpg" alt="">
-                </section>
-            </div>
-            <div class="dtls">
-                <h1>SIG</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis eum labore, excepturi voluptatum ex maxime, atque sed consequatur alias itaque commodi quam fugiat! Nobis, natus. Delectus id laborum in consequatur magnam, voluptatum minima nobis. Voluptatum, sed quos cumque atque veniam vitae? Culpa temporibus voluptas explicabo iste quae obcaecati blanditiis magni, ex soluta fugiat ab itaque iure cumque exercitationem molestias quia quibusdam mollitia? Obcaecati est quasi quaerat iure exercitationem, amet nobis voluptas velit quod nemo qui deleniti quo aliquid voluptatum. Commodi natus ducimus tenetur quos exercitationem reprehenderit similique eaque, aliquid aspernatur ab voluptatibus consequatur accusantium rerum. Illum obcaecati labore et saepe delectus exercitationem, cumque minima sunt nostrum, animi aliquam mollitia nesciunt in corrupti rerum molestiae magnam molestias a repudiandae deserunt officia! Tenetur itaque voluptates excepturi? Dolores saepe quis quod deleniti quo molestias aliquam suscipit aperiam in sunt, modi aliquid quos minima libero atque quisquam praesentium exercitationem nesciunt rerum ipsum dolore nisi?</p>
-            </div>
-            
+      <header class="header">
+        <div id="logo">
+          <img src="../resources/logo.png" alt="" />
         </div>
-        <footer>
-            <section>
-              <div class="logo">
-                <h1>CAG Industries</h1>
-              </div>
-              <nav>
-                <ul>
-                  <li><a href="">Home</a></li>
-                  <li><a href="">Gallery</a></li>
-                  <li><a href="">Products</a></li>
-                  <li><a href="">About</a></li>
-                  <li><a href="">Contact</a></li>
-                </ul>
-              </nav>
-            </section>
-            <section class="con">
-              <span> <i class="fa-solid fa-envelope"></i> support@cagind.in</span>
-              <span> <i class="fa-solid fa-envelope"></i> info@cagind.in</span>
-              <span> <i class="fa-solid fa-phone"></i> +91 8436529670</span>
-              <div class="icons">
-                <a href="">
-                  <i class="fa-brands fa-facebook"></i>
-                </a>
-                <a href="">
-                  <i class="fa-brands fa-youtube"></i>
-                </a>
-                <a href="">
-                  <i class="fa-brands fa-twitter"></i>
-                </a>
-                <a href="">
-                  <i class="fa-brands fa-instagram"></i>
-                </a>
-              </div>
-            </section>
-          </footer>
+        <nav>
+          <ul>
+            <li><a href="../index.html" class="nav">Home</a></li>
+            <li><a href="./product1.html" class="nav active">Products</a></li>
+            <li><a href="./about.html" class="nav">About</a></li>
+            <li><a href="./contact/index.html" class="nav">Contact</a></li>
+          </ul>
+          <div id="srch">
+            <input type="text" placeholder="Search..." />
+            <div class="s-icon">
+              <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+          </div>
+        </nav>
+      </header>
+      <div id="page-1">
+        <div class="imgs">
+          <section class="b-imgs">
+            <img id="img" src="../resources/p1.webp" alt="" />
+          </section>
+          <section class="s-imgs">
+            <img src="../resources/p1.webp" alt="" />
+            <img src="../resources/pro1_1.png" alt="" />
+            <img src="../resources/pro1_2.webp" alt="" />
+            <img src="../resources/pro1_3.jpg" alt="" />
+          </section>
+        </div>
+        <div class="dtls">
+          <h1>Silver Impregnated Graphite Contacts</h1>
+          <p>
+            Silver impregnated graphite contacts are specialized electrical contacts commonly used in electrical switches, relays, and other applications where low voltage and low current signals are transmitted. These contacts are typically composed of a base material, such as graphite, which is impregnated or coated with silver. <br>
+            The addition of silver to graphite contacts enhances their conductivity and improves their resistance to wear and corrosion. Silver is chosen for its excellent electrical conductivity, making it an ideal material for transmitting electrical signals with minimal loss. Graphite, on the other hand, provides mechanical strength and stability to the contacts. <br>
+            The impregnation process involves embedding silver particles into the graphite matrix, either through chemical or mechanical methods. This ensures uniform distribution of silver throughout the contact material, maximizing conductivity and minimizing contact resistance.
+          </p>
+        </div>
+      </div>
+      <footer>
+        <section>
+          <div class="logo">
+            <h1>CAG Industries</h1>
+          </div>
+          <nav>
+            <ul>
+              <li><a href="../index.html">Home</a></li>
+              <li><a href="./product1.html">Products</a></li>
+              <li><a href="./about.html">About</a></li>
+              <li><a href="./contact/index.html">Contact</a></li>
+            </ul>
+          </nav>
+        </section>
+        <section class="con">
+          <span> <i class="fa-solid fa-envelope"></i> support@cagind.in</span>
+          <span> <i class="fa-solid fa-envelope"></i> info@cagind.in</span>
+          <span> <i class="fa-solid fa-phone"></i> +91 8436529670</span>
+          <div class="icons">
+            <a href="">
+              <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="">
+              <i class="fa-brands fa-youtube"></i>
+            </a>
+            <a href="">
+              <i class="fa-brands fa-twitter"></i>
+            </a>
+            <a href="">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+          </div>
+        </section>
+      </footer>
     </div>
-</body>
-<script src="../script/script.js"></script>
+  </body>
+  <script src="../script/script.js"></script>
 </html>
